Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -177,7 +177,7 @@ where\footnote{Note that field-space vectors are not $\phi^I$ itself but its der
 While the third term in the right side of Eq.~(\ref{eq: pia EoM}) can be omitted in the long-wavelength limit, the last term gives a non-negligible contribution, according to Ref.~\cite{Kitamoto:2018dek}, 
 and such a one-point correlator is estimated as
 \bae{
-    \pi_a\pi_b-\frac{1}{a^2}(\partial_i\phi)_a(\partial_i\phi)_b\simeq 3H^2g_{ac}g_{bc}=:3H^2g^2_{ab}.
+    \pi_a\pi_b-\frac{1}{a^2}(\partial_i\phi)_a(\partial_i\phi)_b\simeq \frac{3}{2}H^2g_{ac}g_{bc}=:\frac{3}{2}H^2g^2_{ab}.
 }
 Here $g_{ab}$ represents the mode function of the local-frame UV fields. 
 The power spectrum of the original fields can be expressed by this one as 
@@ -190,7 +190,7 @@ Including the contribution of this term, the slow-roll field-space Langevin eq. 
 }
 Note the following identical deformation.
 \bae{
-    e^I_ag^2_{bc}e^J_c\omega_{Jab}=e^I_ag^2_{bc}e^J_ce^K_a\nabla_Je_{Kb}=g^2_{bc}e^J_cG^{IK}\nabla_Je_{Kb}=g^2_{bc}e^J_c\nabla_Je^I_c.
+    e^I_ag^2_{bc}e^J_c\omega_{Jab}=e^I_ag^2_{bc}e^J_ce^K_a\nabla_Je_{Kb}=g^2_{bc}e^J_cG^{IK}\nabla_Je_{Kb}=g^2_{bc}e^J_c\nabla_Je^I_b.
 }
 
 This new drift term represents non-uniformity of the local frame. If the field space is exactly flat,
