--- a/main.tex
+++ b/main.tex
@@ -228,6 +228,10 @@ for the field-space scalar PDF $P_s=P/\sqrt{G}$. Therefore the resultant Fokker-
 
 
 
+\section{Phase-Space Formulation}
+
+\subsection{Covariant Fokker-Planck and Langevin equations}
+
 
 
 
