--- a/main.bib
+++ b/main.bib
@@ -10,3 +10,14 @@
       SLACcitation   = "%%CITATION = ARXIV:1811.01830;%%"
 }
 
+@article{graham1985covariant,
+  title={Covariant stochastic calculus in the sense of It{\^o}},
+  author={Graham, Robert},
+  journal={Physics Letters A},
+  volume={109},
+  number={5},
+  pages={209--212},
+  year={1985},
+  publisher={Elsevier}
+}
+
