Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -273,8 +273,12 @@ This FP equation can be rewritten explicitly as (\Red{TBC})
 	&+\frac{1}{2}\partial_{\varphi^I}\partial_{\varphi^J}(A_{QQ}{}^{IJ}P)+\partial_{\varphi^I}\partial_{\varpi_J}(A_{QP}{}^I{}_JP)
 	+\frac{1}{2}\partial_{\varpi_I}\partial_{\varpi_J}(A_{PPIJ}P),
 }
-
-
+where $P_I=\tilde{P}_I+\Gamma_{IJ}^K\varpi_KQ^J$ and $R^S{}_{JIK}$ represents the Riemann tensor
+corresponding with the field space metric $G_{IJ}$:
+\bae{
+    R^S{}_{JIK}=\Gamma^S_{JK,I}-\Gamma^S_{IJ,K}
+    +\Gamma^R_{JK}\Gamma^S_{IR}-\Gamma^R_{IJ}\Gamma^S_{KR}.
+}
 
 
 
@@ -284,7 +288,7 @@ This FP equation can be rewritten explicitly as (\Red{TBC})
 
 
 
-
+{
 %\appendix
 
 
