Updates from Overleaf

--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,21 @@
+@article{Gong:2011uw,
+      author         = "Gong, Jinn-Ouk and Tanaka, Takahiro",
+      title          = "{A covariant approach to general field space metric in
+                        multi-field inflation}",
+      journal        = "JCAP",
+      volume         = "1103",
+      year           = "2011",
+      pages          = "015",
+      doi            = "10.1088/1475-7516/2012/02/E01,
+                        10.1088/1475-7516/2011/03/015",
+      note           = "[Erratum: JCAP1202,E01(2012)]",
+      eprint         = "1101.4809",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      reportNumber   = "CERN-PH-TH-2011-012, YITP-11-9",
+      SLACcitation   = "%%CITATION = ARXIV:1101.4809;%%"
+}
+
 @article{Kitamoto:2018dek,
       author         = "Kitamoto, Hiroyuki",
       title          = "{Infrared resummation for derivative interactions in de
